...
      <Text style={styles.title}>Cadastro</Text>
      <TextInput
        style={styles.input}
        placeholder="Nome"
        value={name}
        onChangeText={setName}
        testID="nameInput"
      />
      <TextInput
        style={styles.input}
        placeholder="Email"
        value={email}
        onChangeText={setEmail}
...
        placeholder="Senha"
        value={password}
        onChangeText={setPassword}
        secureTextEntry
        testID="passwordInput"
      />
      <TouchableOpacity onPress={handleRegister} style={[styles.button, { marginTop: 20 }]} testID="registerButton">
        <Text style={styles.buttonText}>Cadastrar</Text>
      </TouchableOpacity>
      <TouchableOpacity onPress={onRegister} testID="navigateToLoginButton">
        <Text style={{ marginTop: 20, color: 'blue' }}>Já tem uma conta? Faça login!</Text>
      </TouchableOpacity>
    </View>
...
