...
  useEffect(() => { load(); }, []);

  return (
    <View style={styles.container} testID="trainingSessionScreen">
      <View style={styles.flexJustifyBetween}>
        <Image source={logo} style={styles.logo} />
        <Icon testID="iconeSino" name="bell" size={30} color="#E67E22" onPress={() => { setEditing(null); setModalReminder(true); }} />
      </View>

      <Text style={styles.header} testID="headerText">Treinos</Text>

      <FlatList
        data={sessions}
...
